--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,9 +1,15 @@
 html,
 body {
-    width: 100%;
-    height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
     background-color: #f7f4f4;
+}
+
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
 }
